# bounce-notify

./: .gitignore  CMakeLists.txt  README.md
include/: bouncer_proto.h
scripts/: deploy.sh
src/: main.c
tests/: bounce_notify.eml  client-test.sh  delay_notify.eml  mock_bouncer_server.c
